- Fixed: incomplete computation when using "--sampling-density" option of
    "congeal" tool.
- Fixed: Slicer can now detect CMTK tools as plugins via their response to
    "--xml"; note that the XML description itself is not fully correct and
    functional yet.

- Improved: eliminated explicit offset calculations in cmtk::DataGrid and use
    existing index-to-offset function instead.

- Testing: added an experimental build with valgrind/memcheck memory checking
    to discover further issues with uninitialized data etc.
- Testing: support for automated memory testing using valgrind etc.
- Testing: added test for multi-channel affine registration using histograms
- Testing: added actual multi-channel registration test, and test for mcwarp
- Testing: added test for importing deflate-compress DICOM images


Release CMTK-1.0.1 (2009-06-25):

- API: changed XformList::Apply to XformList::ApplyInPlace

- Build: added missing applications "regress" and "probe_xform" to default
    build again.

- Changed: probe_xform tool now uses different command line semantics. All
    transformations are concatenated rather than applied separately.

- Added: normal vector of InfinitePlane can now be set directly.
- Added: "sympl" tool can now use different approximated symmetry plane
    orientations to begin search, supporting non-sagittal symmetry planes
    [Tracker #3834].
- Added: established infrastructure for optional algorithm validation,
    beginning with rigid registration. All validation tools must be activated
    via the "BUILD_VALIDATION" option of the top-level CMakeLists.txt file
- Added: tools for rigid registration validation using data from the
    Retrospective Image Registration Evaluation project.
- Added: "registration" tool now supports on-the-fly Sobel edge filtering, and
    histogram equalization was unified with "warp" tool's.

- Fixed: cmtkVoxelMatchingAffineFunctional.h compile error when SMP is turned
    off.